i18n // jp: デバイス->端末.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -3891,7 +3891,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "当アプリには有料ガチャは含まれておりません。このガチャ記録管理機能は、当アプリのサポート対象としている一部のゲームにおいてユーザーが自分のガチャ記録を管理することのみが可能です。貴殿のガチャ記録は、この端末のログインしている Apple ID の iCloud ストレージ内、そしてその Apple ID のサインイン状態中（且つ当アプリを実装してお用いしていた）Apple デバイスにのみ保存されておりますので、プライバシー上のご配慮は要りません。「ゼンレスゾーンゼロ（絶区ゼロ）」は現時点で当アプリのこの機能のサポート対象外です。"
+            "value" : "当アプリには有料ガチャは含まれておりません。このガチャ記録管理機能は、当アプリのサポート対象としている一部のゲームにおいてユーザーが自分のガチャ記録を管理することのみが可能です。貴殿のガチャ記録は、この端末のログインしている Apple ID の iCloud ストレージ内、そしてその Apple ID のサインイン状態中（且つ当アプリを実装してお用いしていた）Apple 端末にのみ保存されておりますので、プライバシー上のご配慮は要りません。「ゼンレスゾーンゼロ（絶区ゼロ）」は現時点で当アプリのこの機能のサポート対象外です。"
           }
         },
         "ko" : {
