Revert "PZBaseKit // jp: [Cancel] 取り消す -> やめる."
This reverts commit 7fc460a1b0b36d3dec0b62a9b5cd33182570d0b4.

--- a/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
+++ b/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
@@ -3124,7 +3124,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "やめる"
+            "value" : "取り消す"
           }
         },
         "ko" : {
